--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url("fontawesome-all.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
-
+@import url("morgan.css")
 /*
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
